 2012-03-28 16:45  dimitr 
   M doc/WhatsNew
Updated the docs.

 2012-03-27 07:08  dimitr 
   M src/common/classes/TempFile.cpp
   M src/jrd/os/win32/winnt.cpp
   M src/utilities/gstat/dba.epp
Fixed CORE-3791: Performance degrades when actively working with databases bigger than the available RAM amount.

 2012-03-24 21:12  robocop 
   M src/include/gen/msgs.h
Update forgotten file.

 2012-03-22 07:48  dimitr 
   M src/jrd/cvt2.cpp
Slightly changed the logic to make it easier to understand.

 2012-03-21 12:56  hvlad 
   M src/jrd/dpm.epp
Undo patch for CORE-3468

 2012-03-19 08:02  hvlad 
   M src/jrd/cch.cpp
   M src/jrd/nbak.cpp
   M src/jrd/nbak.h
Backport fix for bug CORE-3521 : Delta file contents is not flushed to disk

 2012-03-15 12:08  dimitr 
   M src/jrd/cmp.cpp
Fixed CORE-1992: bad BLR -- invalid stream for union select.

 2012-03-15 10:38  dimitr 
   M src/jrd/exe.cpp
   M src/jrd/req.h
Fixed CORE-3092: ROW_COUNT is not cleared before the singleton INSERT statement,

 2012-03-15 09:27  dimitr 
   M src/jrd/DatabaseSnapshot.cpp
Fixed CORE-3625: MON$IO_STATS doesn't report page writes performed asynchronously (at the AST level).

 2012-03-14 17:45  dimitr 
   M src/msgs/messages2.sql
Pleased Paul V. so that CORE-3195 (Concatenation to CHAR(32766/7) impossible) could be resolved.

 2012-03-14 17:36  dimitr 
   M src/dsql/gen.cpp
   M src/dsql/pass1.cpp
   M src/dsql/utld.cpp
   M src/dsql/utld_proto.h
   M src/jrd/DataTypeUtil.cpp
Fixed CORE-3569: CHAR(32767) present in XSQLVAR with length 32765. The JRD part of the patch is not strictly required, as it's used exclusively for VARCHARs right now, but let's be protected for the unpredictable future.

 2012-03-14 15:53  dimitr 
   M src/jrd/cvt2.cpp
   M src/jrd/cvt2_proto.h
   M src/jrd/opt.cpp
Backported CORE-3553: Nested loop plan is chosen instead of the sort merge for joining independent streams using keys of different types.

 2012-03-14 15:23  dimitr 
   M src/jrd/DatabaseSnapshot.cpp